--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,19 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+  color: #1F2328;
+  background: #ffffff;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #e6edf3;
+    background: #0d1117
+  }
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
 
 body {
   word-break: break-word;
@@ -8,9 +21,21 @@ body {
 }
 
 .markdown-body {
+  position: relative;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 45px;
+  max-width: 1000px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.input {
+  position: relative;
+  width: max-content;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media (max-width: 767px) {
