--- a/app/globals.css
+++ b/app/globals.css
@@ -1,112 +1,130 @@
 :root {
-  --font-color: #1F2328;
-  --bg-color: #ffffff;
+	--font-color: #1f2328;
+	--bg-color: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --font-color: #e6edf3;
-    --bg-color: #0d1117;
-  }
+	:root {
+		--font-color: #e6edf3;
+		--bg-color: #0d1117;
+	}
 }
 
 body {
-  color: var(--font-color);
-  fill: var(--font-color);
-  background: var(--bg-color);
+	color: var(--font-color);
+	fill: var(--font-color);
+	background: var(--bg-color);
 }
 
 input {
-  color: var(--font-color);
-  caret-color: var(--font-color);
+	color: var(--font-color);
+	caret-color: var(--font-color);
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+html,
+body {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-  word-break: break-word;
-  hyphens: auto;
+	word-break: break-word;
+	hyphens: auto;
 }
 
 .markdown-body {
-  position: relative;
-  box-sizing: border-box;
-  margin: 0 auto;
-  padding: 45px;
-  max-width: 1000px;
-  left: 50%;
-  transform: translateX(-50%);
+	position: relative;
+	box-sizing: border-box;
+	margin: 0 auto;
+	padding: 45px;
+	max-width: 1000px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.powered-by {
+	padding: 10px;
+	text-align: center;
+}
+
+.powered-by span {
+	opacity: 0.7;
+}
+
+.powered-by a {
+	opacity: 0.9;
+	color: var(--font-color);
+	text-decoration-line: underline;
+	text-decoration-style: dashed;
+	text-underline-offset: 3px;
 }
 
 .input-container * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .input-container {
-  position: absolute;
-  width: max-content;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+	position: absolute;
+	width: max-content;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .input-container .input-wrapper {
-  margin: 20px 0;
-  display: flex;
-  align-items: center;
-  width: 85vw;
-  max-width: 530px;
-  background: #1a1a1a;
-  border-radius: 10px;
-  height: 48px;
+	margin: 20px 0;
+	display: flex;
+	align-items: center;
+	width: 85vw;
+	max-width: 530px;
+	background: #1a1a1a;
+	border-radius: 10px;
+	height: 48px;
 }
 
 .input-container desc {
-  position: absolute;
-  max-width: max-content;
-  opacity: 0.85;
-  padding-left: 5px;
+	position: absolute;
+	max-width: max-content;
+	opacity: 0.85;
+	padding-left: 5px;
 }
 
 .input-container input {
-  background: transparent;
-  margin: 0 10px;
-  flex-grow: 1;
-  flex-shrink: 1;
-  outline: none;
-  border: none;
-  height: 100%;
-  min-width: 50px;
-  font-size: 18px;
-  font-weight: 500;
+	background: transparent;
+	margin: 0 10px;
+	flex-grow: 1;
+	flex-shrink: 1;
+	outline: none;
+	border: none;
+	height: 100%;
+	min-width: 50px;
+	font-size: 18px;
+	font-weight: 500;
 }
 
 .input-container button {
-  background: #0a0a0a;
-  flex-grow: 0;
-  flex-shrink: 0;
-  border: none;
-  border-radius: 10px;
-  padding: 0 15px;
-  margin-right: 6px;
-  cursor: pointer;
-  height: 36px;
-  font-weight: 600;
-  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.145);
+	background: #0a0a0a;
+	flex-grow: 0;
+	flex-shrink: 0;
+	border: none;
+	border-radius: 10px;
+	padding: 0 15px;
+	margin-right: 6px;
+	cursor: pointer;
+	height: 36px;
+	font-weight: 600;
+	box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.145);
 }
 
 .input-container button a {
-  color: #ededed !important;
-  text-decoration: none !important;
+	color: #ededed !important;
+	text-decoration: none !important;
 }
 
 @media (max-width: 767px) {
-  .markdown-body {
-    padding: 15px;
-  }
+	.markdown-body {
+		padding: 15px;
+	}
 }
