--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,9 @@ body {
 body {
 	word-break: break-word;
 	hyphens: auto;
+	height: max-content;
+	min-height: 100%;
+	position: relative;
 }
 
 .markdown-body {
@@ -39,13 +42,17 @@ body {
 	box-sizing: border-box;
 	margin: 0 auto;
 	padding: 45px;
+	padding-bottom: 80px;
 	max-width: 1000px;
 	left: 50%;
 	transform: translateX(-50%);
 }
 
 .powered-by {
-	padding: 10px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding-bottom: 20px;
 	text-align: center;
 }
 
@@ -58,6 +65,13 @@ body {
 	color: var(--font-color);
 	text-decoration-line: underline;
 	text-decoration-style: dashed;
+	text-underline-offset: 3px;
+}
+
+.example a {
+	opacity: 0.9;
+	color: var(--font-color);
+	text-decoration-line: underline;
 	text-underline-offset: 3px;
 }
 
